add snack bar & navigation after adding comparison, add screen detail comparison

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,4 +173,7 @@ dependencies {
     //ShortcutBadger
     implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 
+    //TableView
+    implementation "com.evrencoskun.library:tableview:0.8.9.2"
+
 }
