--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,10 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:ignore="GoogleAppIndexingWarning,LockedOrientationActivity"
+        tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="q">
         <activity
             android:name="com.realtyagency.tm.presentation.SplashActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +32,6 @@
         </activity>
         <activity
             android:name="com.realtyagency.tm.presentation.main.MainActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <meta-data
